## 20210820

- istio版本升级为1.11.0

## 20210810

- critools版本升级到1.22.0
- 调整k3s.master.install & k3s.worker.install

## 20210720
- 移除k0s,k0sctl
- 新增ergoget 下载kind,kubectl,k7s,pkg, 移除getkind, getk7s, getpkg
- 新增k8e(k3s精简)
- 更新helminit,默认注释掉`nginx`,`ingress-nginx`helm, 移除`kuma`helm
- `ysicing/kubectl` 默认更新到v1.18.20
- helm版本升级到3.6.3
- istio版本升级到1.10.3

## 20210617
- etcd版本升级为3.5.0
- helm版本升级为3.6.1
- 移除osm,getistio

## 20210611
- ctop版本升级为0.7.6
- istio版本升级到1.10.1

## 20210603
- kind版本升级为0.11.1
- helm版本升级为3.6.0
- istio版本升级到1.10.0
- osm版本升级为0.8.4
- k3s版本升级为1.18.19+k3s1
- k0s版本升级为1.21.1+k0s.0

## 20210513
- k8s版本升级为1.18.19
- etcd版本升级为3.4.16
- docker-compose版本升级为1.29.2
- istio版本升级到1.9.5
- linkerd2版本升级到2.10.2
- k0s版本升级为1.21.0+k0s.0
- k0sctl版本升级为0.8.4

## 20210428

- istio版本升级到1.9.4
- k3s版本调整为1.18.18+k3s1
- k0s版本升级为0.13.1
- k0sctl版本升级为0.8.2
- critools版本升级为1.21.0

## 20210423
- k8s版本升级为1.18.18
- helmv3版本升级为3.5.4
- docker-compose版本升级为1.29.1
- istio版本升级到1.9.3
- osm版本升级为0.8.3
- linkerd2版本升级到2.10.1

## 20210402

- k0s版本升级为0.12.1
- 新增k0sctl

## 20210401
- k3s版本升级为v1.20.5+k3s1
- 新增k3s.install

## 20210331

- docker-compose版本升级为1.28.6
- istio版本升级到1.9.2
- getistio版本升级到v1.0.5
- osm版本升级为0.8.2
- k0s版本升级为0.12.0

## 20210322

- k8s版本升级为1.18.17

## 20210316

- linkerd2版本升级到2.10.0,修复下载url
- getistio版本升级到v1.0.4
- istio版本升级到1.9.0
- helmv3版本升级为3.5.3
- etcd版本升级为3.4.15

## 20210226

- 新增getpkg获取k8s资源pkg
- 新增getistiov1.0.3
- docker-compose版本升级为1.28.5
- linkerd2版本升级为2.9.4
- k3s版本升级为v1.20.4+k3s1

## 20210218

- k8s版本升级为1.18.16
- docker-compose版本升级为1.28.3

## 20210210

- helmv3版本升级为3.5.2
- istio版本升级为1.9.0
- osm版本升级为0.7.0
- linkerd2版本升级为2.9.3
- k0s版本升级为0.10.0

## 20210204

- 更新k8s(pkg)脚本
- helmv3版本升级为3.5.1

## 20210127

- kind版本升级为0.10.0
- k8s版本升级为1.18.15
- helmv3版本升级为3.5.0
- docker-compose版本升级为1.28.2
- istio版本升级为1.8.2
- osm版本升级为0.6.1
- linkerd2版本升级为2.9.2
- k3s版本升级为v1.20.2+k3s1
- k0s版本升级为0.9.1
- critools版本升级为1.20.0


## 20201229

- tools新增 weaveworks/scope 版本为 1.13.1

## 20201227

- 新增mc, k0s