@@ -1,3 +1,11 @@
+## 20210826
+
+- 优化kubectl镜像
+- istio版本升级到1.11.1
+- k8e升级到v1.19.14+k8e1
+- 新增tailscale离线包
+- ergoget新增tailscaleget子命令
+
 ## 20210820
 
 - istio版本升级为1.11.0
